tests/errors/tc_expr_bitwise.lx
@module "main"

pub const main -> fn () int {
    let x: int = 1 & "hello";
    return 0;
}
